--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -1,11 +1,11 @@
-m4trace:aclocal.m4:1150: -1- m4_include([m4/boost.m4])
+m4trace:aclocal.m4:1153: -1- m4_include([m4/boost.m4])
 m4trace:m4/boost.m4:48: -1- m4_pattern_forbid([^_?(BOOST|Boost)_])
-m4trace:aclocal.m4:1151: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1152: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1153: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1154: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1155: -1- m4_include([m4/lt~obsolete.m4])
-m4trace:aclocal.m4:1156: -1- m4_include([m4/pkg.m4])
+m4trace:aclocal.m4:1154: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1155: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1156: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1157: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1158: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1159: -1- m4_include([m4/pkg.m4])
 m4trace:configure.ac:1: -1- AC_INIT([ShaderExamples], [0.1])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([_AC_])
@@ -156,7 +156,7 @@ m4trace:configure.ac:1: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:1: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:3: -1- AM_INIT_AUTOMAKE([foreign subdir-objects])
 m4trace:configure.ac:3: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:3: -1- AM_AUTOMAKE_VERSION([1.14])
+m4trace:configure.ac:3: -1- AM_AUTOMAKE_VERSION([1.15])
 m4trace:configure.ac:3: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:3: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:3: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -257,7 +257,7 @@ m4trace:configure.ac:3: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
 m4trace:configure.ac:5: -1- AC_CONFIG_HEADERS([config.h])
 m4trace:configure.ac:7: -1- AC_PROG_LIBTOOL
 m4trace:configure.ac:7: -1- _m4_warn([obsolete], [The macro `AC_PROG_LIBTOOL' is obsolete.
-You should run autoupdate.], [m4/libtool.m4:107: AC_PROG_LIBTOOL is expanded from...
+You should run autoupdate.], [m4/libtool.m4:99: AC_PROG_LIBTOOL is expanded from...
 configure.ac:7: the top level])
 m4trace:configure.ac:7: -1- LT_INIT
 m4trace:configure.ac:7: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
@@ -431,8 +431,7 @@ m4trace:configure.ac:7: -1- m4_pattern_allow([^RANLIB$])
 m4trace:configure.ac:7: -1- m4_pattern_allow([LT_OBJDIR])
 m4trace:configure.ac:7: -1- AC_DEFINE_TRACE_LITERAL([LT_OBJDIR])
 m4trace:configure.ac:7: -1- m4_pattern_allow([^LT_OBJDIR$])
-m4trace:configure.ac:7: -1- AH_OUTPUT([LT_OBJDIR], [/* Define to the sub-directory in which libtool stores uninstalled libraries.
-   */
+m4trace:configure.ac:7: -1- AH_OUTPUT([LT_OBJDIR], [/* Define to the sub-directory where libtool stores uninstalled libraries. */
 @%:@undef LT_OBJDIR])
 m4trace:configure.ac:7: -1- LT_SUPPORTED_TAG([CC])
 m4trace:configure.ac:7: -1- AC_SUBST([MANIFEST_TOOL])
@@ -453,6 +452,9 @@ m4trace:configure.ac:7: -1- m4_pattern_allow([^OTOOL$])
 m4trace:configure.ac:7: -1- AC_SUBST([OTOOL64])
 m4trace:configure.ac:7: -1- AC_SUBST_TRACE([OTOOL64])
 m4trace:configure.ac:7: -1- m4_pattern_allow([^OTOOL64$])
+m4trace:configure.ac:7: -1- AC_SUBST([LT_SYS_LIBRARY_PATH])
+m4trace:configure.ac:7: -1- AC_SUBST_TRACE([LT_SYS_LIBRARY_PATH])
+m4trace:configure.ac:7: -1- m4_pattern_allow([^LT_SYS_LIBRARY_PATH$])
 m4trace:configure.ac:7: -1- AH_OUTPUT([HAVE_DLFCN_H], [/* Define to 1 if you have the <dlfcn.h> header file. */
 @%:@undef HAVE_DLFCN_H])
 m4trace:configure.ac:7: -1- AC_SUBST([CPP])
@@ -536,6 +538,9 @@ m4trace:configure.ac:8: -1- m4_pattern_allow([^CXXCPP$])
 m4trace:configure.ac:8: -1- AC_SUBST([LD])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([LD])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^LD$])
+m4trace:configure.ac:8: -1- AC_SUBST([LT_SYS_LIBRARY_PATH])
+m4trace:configure.ac:8: -1- AC_SUBST_TRACE([LT_SYS_LIBRARY_PATH])
+m4trace:configure.ac:8: -1- m4_pattern_allow([^LT_SYS_LIBRARY_PATH$])
 m4trace:configure.ac:11: -1- AC_SUBST([BOOST_ROOT])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([BOOST_ROOT])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^BOOST_ROOT$])
